// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeUpdateInputType Definition Article may have an update input type: ArticleUpdateInput 1`] = `
""""The "Article" node's update"""
input ArticleUpdateInput {
  status: ArticleStatus
  title: NonEmptySanitizedString
  slug: Slug

  """The article's body"""
  body: DraftJS
  category: ArticleUpdateCategoryInput
  updatedBy: ArticleUpdateUpdatedByInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  views: UnsignedBigInt
  score: UnsignedFloat
  machineTags: JSONArray
  tags: ArticleUpdateTagsInput
  extension: ArticleUpdateExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeUpdateInputType Definition Article may have an update input type: ArticleUpdateWithoutCategoryInput 1`] = `
""""The "Article" node's update"""
input ArticleUpdateWithoutCategoryInput {
  status: ArticleStatus
  title: NonEmptySanitizedString
  slug: Slug

  """The article's body"""
  body: DraftJS
  updatedBy: ArticleUpdateUpdatedByInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  views: UnsignedBigInt
  score: UnsignedFloat
  machineTags: JSONArray
  tags: ArticleUpdateTagsInput
  extension: ArticleUpdateExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeUpdateInputType Definition Article may have an update input type: ArticleUpdateWithoutCreatedByInput 1`] = `
""""The "Article" node's update"""
input ArticleUpdateWithoutCreatedByInput {
  status: ArticleStatus
  title: NonEmptySanitizedString
  slug: Slug

  """The article's body"""
  body: DraftJS
  category: ArticleUpdateCategoryInput
  updatedBy: ArticleUpdateUpdatedByInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  views: UnsignedBigInt
  score: UnsignedFloat
  machineTags: JSONArray
  tags: ArticleUpdateTagsInput
  extension: ArticleUpdateExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeUpdateInputType Definition Article may have an update input type: ArticleUpdateWithoutUpdatedByInput 1`] = `
""""The "Article" node's update"""
input ArticleUpdateWithoutUpdatedByInput {
  status: ArticleStatus
  title: NonEmptySanitizedString
  slug: Slug

  """The article's body"""
  body: DraftJS
  category: ArticleUpdateCategoryInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  views: UnsignedBigInt
  score: UnsignedFloat
  machineTags: JSONArray
  tags: ArticleUpdateTagsInput
  extension: ArticleUpdateExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeUpdateInputType Definition ArticleExtension may have an update input type: ArticleExtensionUpdateInput 1`] = `
""""The "ArticleExtension" node's update"""
input ArticleExtensionUpdateInput {
  """The source of the article"""
  source: NonEmptyTrimmedString
}"
`;

exports[`NodeUpdateInputType Definition ArticleExtension may have an update input type: ArticleExtensionUpdateWithoutArticleInput 1`] = `
""""The "ArticleExtension" node's update"""
input ArticleExtensionUpdateWithoutArticleInput {
  """The source of the article"""
  source: NonEmptyTrimmedString
}"
`;

exports[`NodeUpdateInputType Definition ArticleTag may have an update input type: ArticleTagUpdateInput 1`] = `
""""The "ArticleTag" node's update"""
input ArticleTagUpdateInput {
  order: UnsignedInt
  moderations: ArticleTagUpdateModerationsInput
}"
`;

exports[`NodeUpdateInputType Definition ArticleTag may have an update input type: ArticleTagUpdateWithoutArticleInput 1`] = `
""""The "ArticleTag" node's update"""
input ArticleTagUpdateWithoutArticleInput {
  order: UnsignedInt
  moderations: ArticleTagUpdateModerationsInput
}"
`;

exports[`NodeUpdateInputType Definition ArticleTag may have an update input type: ArticleTagUpdateWithoutTagInput 1`] = `
""""The "ArticleTag" node's update"""
input ArticleTagUpdateWithoutTagInput {
  order: UnsignedInt
  moderations: ArticleTagUpdateModerationsInput
}"
`;

exports[`NodeUpdateInputType Definition ArticleTagModeration may have an update input type: ArticleTagModerationUpdateInput 1`] = `
""""The "ArticleTagModeration" node's update"""
input ArticleTagModerationUpdateInput {
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeUpdateInputType Definition ArticleTagModeration may have an update input type: ArticleTagModerationUpdateWithoutArticleTagInput 1`] = `
""""The "ArticleTagModeration" node's update"""
input ArticleTagModerationUpdateWithoutArticleTagInput {
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeUpdateInputType Definition ArticleTagModeration may have an update input type: ArticleTagModerationUpdateWithoutModeratorInput 1`] = `
""""The "ArticleTagModeration" node's update"""
input ArticleTagModerationUpdateWithoutModeratorInput {
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeUpdateInputType Definition Category may have an update input type: CategoryUpdateInput 1`] = `
""""The "Category" node's update"""
input CategoryUpdateInput {
  parent: CategoryUpdateParentInput
  order: UnsignedInt

  """This category's children"""
  children: CategoryUpdateChildrenInput

  """The articles attached to this category"""
  articles: CategoryUpdateArticlesInput
}"
`;

exports[`NodeUpdateInputType Definition Category may have an update input type: CategoryUpdateWithoutParentInput 1`] = `
""""The "Category" node's update"""
input CategoryUpdateWithoutParentInput {
  order: UnsignedInt

  """This category's children"""
  children: CategoryUpdateChildrenInput

  """The articles attached to this category"""
  articles: CategoryUpdateArticlesInput
}"
`;

exports[`NodeUpdateInputType Definition Tag may have an update input type: TagUpdateInput 1`] = `
""""The "Tag" node's update"""
input TagUpdateInput {
  """A tag can be deprecated"""
  deprecated: Boolean
  articles: TagUpdateArticlesInput
}"
`;

exports[`NodeUpdateInputType Definition UserProfile may have an update input type: UserProfileUpdateInput 1`] = `
""""The "UserProfile" node's update"""
input UserProfileUpdateInput {
  birthday: Date
  facebookId: ID
  googleId: ID
  twitterHandle: ID
}"
`;

exports[`NodeUpdateInputType Definition UserProfile may have an update input type: UserProfileUpdateWithoutUserInput 1`] = `
""""The "UserProfile" node's update"""
input UserProfileUpdateWithoutUserInput {
  birthday: Date
  facebookId: ID
  googleId: ID
  twitterHandle: ID
}"
`;
